# RayTracerChallenge

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
src/: myCanvas.cpp  myCanvas.hpp  myColours.cpp  myColours.hpp  myData.cpp  myData.hpp  myTests.cpp  util.cpp  util.hpp
